@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/zebra
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/zebra/Attic/ChangeLog,v 1.2 2003/04/23 01:40:08 method Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/zebra/Attic/ChangeLog,v 1.3 2003/04/28 19:57:16 method Exp $
+
+*zebra-0.93b (28 Apr 2003)
+
+  28 Apr 2003; Joshua Brindle <method@gentoo.org> Manifest,
+  zebra-0.93b.ebuild:
+  version bump
 
 *zebra-0.93a (22 Apr 2003)
 
